--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
     "next": "^15.0.0",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^6.9.14",
     "patch-package": "^8.0.0",
     "paystack-node": "^0.3.0",
