--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -5,3 +5,5 @@ runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
   maxInstances: 1
+  # Increase timeout to 5 minutes to allow for larger file uploads.
+  timeoutSeconds: 300
