--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,23 @@
     "app/**/*.ts": {
       "maxDuration": 300
     }
-  }
+  },
+  "crons": [
+    {
+      "path": "/api/cron/update-standings",
+      "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/cron/start-tournaments",
+      "schedule": "*/15 * * * *"
+    },
+    {
+      "path": "/api/cron/trigger-payouts",
+      "schedule": "0 0 * * *"
+    },
+    {
+      "path": "/api/cron/clone-tournaments",
+      "schedule": "0 1 * * *"
+    }
+  ]
 }
