--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,35 @@
 {
-  "name": "eArena",
+  "name": "eArena: Your eFootball Tournament Platform",
   "short_name": "eArena",
-  "description": "Your eFootball Tournament Platform",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#030822",
-  "theme_color": "#A67C52",
+  "description": "Create, manage, and compete in eFootball tournaments.",
   "icons": [
     {
       "src": "/images/logo-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "/images/logo-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/images/logo-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/images/logo-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
-  ]
+  ],
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#A67C52",
+  "background_color": "#030822"
 }
