--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,35 +1,52 @@
 {
-  "name": "eArena: Your eFootball Tournament Platform",
-  "short_name": "eArena",
-  "description": "Create, manage, and compete in eFootball tournaments.",
-  "icons": [
-    {
-      "src": "/images/logo-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/images/logo-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/images/logo-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "/images/logo-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    }
-  ],
-  "start_url": "/",
-  "display": "standalone",
-  "theme_color": "#A67C52",
-  "background_color": "#030822"
+    "name": "eArena: eFootball Tournaments",
+    "short_name": "eArena",
+    "description": "The ultimate platform for creating, managing, and competing in eFootball tournaments.",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "#0f172a",
+    "theme_color": "#172554",
+    "icons": [
+        {
+            "src": "/images/icons/icon.png",
+            "sizes": "72x72",
+            "type": "image/png"
+        },
+        {
+            "src": "/images/icons/icon.png",
+            "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "/images/icons/icon.png",
+            "sizes": "128x128",
+            "type": "image/png"
+        },
+        {
+            "src": "/images/icons/icon.png",
+            "sizes": "144x144",
+            "type": "image/png"
+        },
+        {
+            "src": "/images/icons/icon.png",
+            "sizes": "152x152",
+            "type": "image/png"
+        },
+        {
+            "src": "/images/icons/icon.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/images/icons/icon.png",
+            "sizes": "384x384",
+            "type": "image/png"
+        },
+        {
+            "src": "/images/icons/icon.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
