--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,43 +1,22 @@
 {
-  "name": "eArena: eFootball Tournaments",
-  "short_name": "eArena",
-  "description": "The ultimate platform for creating, managing, and competing in eFootball tournaments.",
-  "start_url": "/?source=pwa",
-  "scope": "/",
-  "display": "standalone",
-  "orientation": "portrait-primary",
-  "background_color": "#0f172a",
-  "theme_color": "#172554",
-  "icons": [
-    {
-      "src": "/icons/android/android-launchericon-48-48.png",
-      "sizes": "48x48",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/android/android-launchericon-72-72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/android/android-launchericon-96-96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/android/android-launchericon-144-144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/android/android-launchericon-192-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/android/android-launchericon-512-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+    "name": "eArena",
+    "short_name": "eArena",
+    "description": "Your eFootball Tournament Platform",
+    "icons": [
+        {
+            "src": "/icons/android/android-launchericon-192-192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/icons/android/android-launchericon-512-512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
+    "theme_color": "#172554",
+    "background_color": "#030822",
+    "start_url": "/",
+    "display": "standalone",
+    "orientation": "portrait"
 }
